--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -630,8 +630,8 @@ h2 {
   bottom: 0px;
 }
 
-.bottom-11 {
-  bottom: 2.75rem;
+.bottom-5 {
+  bottom: 1.25rem;
 }
 
 .left-0 {
@@ -650,16 +650,16 @@ h2 {
   top: 0px;
 }
 
+.top-1 {
+  top: 0.25rem;
+}
+
 .-z-10 {
   z-index: -10;
 }
 
 .z-10 {
   z-index: 10;
-}
-
-.col-start-2 {
-  grid-column-start: 2;
 }
 
 .mx-auto {
@@ -712,6 +712,10 @@ h2 {
   margin-bottom: 1rem;
 }
 
+.mb-56 {
+  margin-bottom: 14rem;
+}
+
 .mb-6 {
   margin-bottom: 1.5rem;
 }
@@ -736,8 +740,8 @@ h2 {
   margin-top: 2.75rem;
 }
 
-.mb-56 {
-  margin-bottom: 14rem;
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .block {
@@ -797,6 +801,18 @@ h2 {
   width: 50%;
 }
 
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-1\/5 {
+  width: 20%;
+}
+
 .w-11\/12 {
   width: 91.666667%;
 }
@@ -807,6 +823,10 @@ h2 {
 
 .w-2\/3 {
   width: 66.666667%;
+}
+
+.w-2\/5 {
+  width: 40%;
 }
 
 .w-3\/4 {
@@ -829,6 +849,10 @@ h2 {
   width: 1.25rem;
 }
 
+.w-\[14\%\] {
+  width: 14%;
+}
+
 .w-\[90\%\] {
   width: 90%;
 }
@@ -840,10 +864,6 @@ h2 {
 
 .w-full {
   width: 100%;
-}
-
-.w-2\/5 {
-  width: 40%;
 }
 
 .basis-40 {
@@ -871,11 +891,6 @@ h2 {
 
 .-translate-y-full {
   --tw-translate-y: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-1\/4 {
-  --tw-translate-x: 25%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -924,22 +939,6 @@ h2 {
   grid-template-columns: 2fr 1fr;
 }
 
-.grid-cols-reponsive-6 {
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-}
-
-.grid-cols-\[1fr_3fr\] {
-  grid-template-columns: 1fr 3fr;
-}
-
-.grid-cols-\[1fr_4fr\] {
-  grid-template-columns: 1fr 4fr;
-}
-
-.grid-cols-\[1fr_2fr\] {
-  grid-template-columns: 1fr 2fr;
-}
-
 .grid-rows-\[4fr_1fr\] {
   grid-template-rows: 4fr 1fr;
 }
@@ -984,8 +983,8 @@ h2 {
   gap: 0.5rem;
 }
 
-.gap-20 {
-  gap: 5rem;
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .gap-5 {
@@ -1011,6 +1010,16 @@ h2 {
        column-gap: 4rem;
 }
 
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.gap-x-8 {
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+
 .gap-x-9 {
   -moz-column-gap: 2.25rem;
        column-gap: 2.25rem;
@@ -1028,6 +1037,14 @@ h2 {
   row-gap: 5rem;
 }
 
+.gap-y-24 {
+  row-gap: 6rem;
+}
+
+.gap-y-4 {
+  row-gap: 1rem;
+}
+
 .gap-y-5 {
   row-gap: 1.25rem;
 }
@@ -1040,21 +1057,16 @@ h2 {
   row-gap: 1.75rem;
 }
 
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-
-.gap-y-4 {
-  row-gap: 1rem;
-}
-
 .self-end {
   align-self: flex-end;
 }
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.scroll-smooth {
+  scroll-behavior: smooth;
 }
 
 .rounded-2xl {
@@ -1120,20 +1132,20 @@ h2 {
   background-color: rgb(252 236 82 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(\'\.\.\/images\/hero-banner-cropped\.png\'\)\] {
-  background-image: url('../images/hero-banner-cropped.png');
+.bg-\[url\(\'\.\.\/images\/download-our-app-bg\.svg\'\)\] {
+  background-image: url('../images/download-our-app-bg.svg');
+}
+
+.bg-\[url\(\'\.\.\/images\/footer-bg\.svg\'\)\] {
+  background-image: url('../images/footer-bg.svg');
+}
+
+.bg-\[url\(\'\.\.\/images\/hero-banner\.svg\'\)\] {
+  background-image: url('../images/hero-banner.svg');
 }
 
 .bg-\[url\(\'\.\.\/images\/we-are-better-bg\.svg\'\)\] {
   background-image: url('../images/we-are-better-bg.svg');
-}
-
-.bg-\[url\(\'\.\.\/images\/download-our-app-bg\.png\'\)\] {
-  background-image: url('../images/download-our-app-bg.png');
-}
-
-.bg-\[url\(\'\.\.\/images\/download-our-app-bg\.svg\'\)\] {
-  background-image: url('../images/download-our-app-bg.svg');
 }
 
 .bg-cover {
@@ -1146,6 +1158,10 @@ h2 {
 
 .bg-top {
   background-position: top;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .px-10 {
@@ -1183,11 +1199,6 @@ h2 {
   padding-bottom: 2.25rem;
 }
 
-.px-9 {
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
-}
-
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -1196,8 +1207,8 @@ h2 {
   padding-bottom: 3.5rem;
 }
 
-.pb-16 {
-  padding-bottom: 4rem;
+.pb-20 {
+  padding-bottom: 5rem;
 }
 
 .pb-28 {
@@ -1255,6 +1266,14 @@ h2 {
 
 .pt-6 {
   padding-top: 1.5rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .text-center {
@@ -1423,21 +1442,41 @@ h2 {
 }
 
 @media (min-width: 640px) {
+  .sm\:bottom-11 {
+    bottom: 2.75rem;
+  }
+
   .sm\:my-20 {
     margin-top: 5rem;
     margin-bottom: 5rem;
+  }
+
+  .sm\:w-1\/2 {
+    width: 50%;
   }
 
   .sm\:w-11\/12 {
     width: 91.666667%;
   }
 
+  .sm\:w-4\/5 {
+    width: 80%;
+  }
+
+  .sm\:w-\[15\%\] {
+    width: 15%;
+  }
+
   .sm\:w-auto {
     width: auto;
   }
 
-  .sm\:w-4\/5 {
-    width: 80%;
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .sm\:grid-cols-\[1fr_2fr\] {
@@ -1457,6 +1496,11 @@ h2 {
     padding-right: 3.5rem;
   }
 
+  .sm\:py-7 {
+    padding-top: 1.75rem;
+    padding-bottom: 1.75rem;
+  }
+
   .sm\:text-start {
     text-align: start;
   }
@@ -1470,11 +1514,29 @@ h2 {
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
+
+  .sm\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
 }
 
 @media (min-width: 768px) {
   .md\:mb-12 {
     margin-bottom: 3rem;
+  }
+
+  .md\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .md\:w-auto {
+    width: auto;
   }
 
   .md\:grid-cols-\[1fr_8fr\] {
@@ -1572,12 +1634,16 @@ h2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .lg\:grid-cols-\[2fr_1fr_2fr\] {
-    grid-template-columns: 2fr 1fr 2fr;
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-\[1fr_2fr\] {
     grid-template-columns: 1fr 2fr;
+  }
+
+  .lg\:grid-cols-\[2fr_1fr_2fr\] {
+    grid-template-columns: 2fr 1fr 2fr;
   }
 
   .lg\:flex-row {
@@ -1595,6 +1661,11 @@ h2 {
   .lg\:gap-x-11 {
     -moz-column-gap: 2.75rem;
          column-gap: 2.75rem;
+  }
+
+  .lg\:gap-x-16 {
+    -moz-column-gap: 4rem;
+         column-gap: 4rem;
   }
 
   .lg\:self-center {
@@ -1672,6 +1743,10 @@ h2 {
     display: none;
   }
 
+  .xl\:w-\[9\%\] {
+    width: 9%;
+  }
+
   .xl\:w-auto {
     width: auto;
   }
@@ -1688,6 +1763,14 @@ h2 {
 
   .xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .xl\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
+  .xl\:grid-cols-\[1fr_4fr_1fr\] {
+    grid-template-columns: 1fr 4fr 1fr;
   }
 
   .xl\:gap-10 {
@@ -1718,6 +1801,11 @@ h2 {
     line-height: 2.5rem;
   }
 
+  .xl\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
   .xl\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
@@ -1726,10 +1814,5 @@ h2 {
   .xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .xl\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
   }
 }
