--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -622,10 +622,6 @@ h2 {
   inset: 0px;
 }
 
-.-right-1\/2 {
-  right: -50%;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
@@ -636,6 +632,10 @@ h2 {
 
 .left-0 {
   left: 0px;
+}
+
+.left-1\/2 {
+  left: 50%;
 }
 
 .left-3 {
@@ -652,14 +652,6 @@ h2 {
 
 .top-1 {
   top: 0.25rem;
-}
-
-.right-1\/2 {
-  right: 50%;
-}
-
-.left-1\/2 {
-  left: 50%;
 }
 
 .-z-10 {
@@ -849,12 +841,16 @@ h2 {
   width: 80%;
 }
 
-.w-40 {
-  width: 10rem;
+.w-4\/6 {
+  width: 66.666667%;
 }
 
 .w-5 {
   width: 1.25rem;
+}
+
+.w-60 {
+  width: 15rem;
 }
 
 .w-\[14\%\] {
@@ -874,16 +870,8 @@ h2 {
   width: 100%;
 }
 
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-28 {
-  width: 7rem;
-}
-
-.w-60 {
-  width: 15rem;
+.max-w-lg {
+  max-width: 32rem;
 }
 
 .basis-40 {
@@ -919,11 +907,6 @@ h2 {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-y-3\/4 {
-  --tw-translate-y: 75%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .translate-y-\[45\%\] {
   --tw-translate-y: 45%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -931,11 +914,6 @@ h2 {
 
 .translate-y-full {
   --tw-translate-y: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-1\/2 {
-  --tw-translate-x: 50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1297,10 +1275,6 @@ h2 {
   padding-top: 2rem;
 }
 
-.pb-16 {
-  padding-bottom: 4rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1484,8 +1458,16 @@ h2 {
     width: 91.666667%;
   }
 
+  .sm\:w-2\/5 {
+    width: 40%;
+  }
+
   .sm\:w-4\/5 {
     width: 80%;
+  }
+
+  .sm\:w-40 {
+    width: 10rem;
   }
 
   .sm\:w-\[15\%\] {
@@ -1494,10 +1476,6 @@ h2 {
 
   .sm\:w-auto {
     width: auto;
-  }
-
-  .sm\:w-2\/5 {
-    width: 40%;
   }
 
   .sm\:grid-cols-2 {
@@ -1544,9 +1522,19 @@ h2 {
     line-height: 2.25rem;
   }
 
+  .sm\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .sm\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -1555,16 +1543,16 @@ h2 {
     margin-bottom: 3rem;
   }
 
+  .md\:w-1\/3 {
+    width: 33.333333%;
+  }
+
   .md\:w-2\/3 {
     width: 66.666667%;
   }
 
   .md\:w-auto {
     width: auto;
-  }
-
-  .md\:w-1\/3 {
-    width: 33.333333%;
   }
 
   .md\:grid-cols-\[1fr_8fr\] {
@@ -1583,14 +1571,6 @@ h2 {
 
   .lg\:left-20 {
     left: 5rem;
-  }
-
-  .lg\:right-0 {
-    right: 0px;
-  }
-
-  .lg\:right-1\/2 {
-    right: 50%;
   }
 
   .lg\:z-0 {
@@ -1642,11 +1622,6 @@ h2 {
     width: 100%;
   }
 
-  .lg\:translate-x-3\/4 {
-    --tw-translate-x: 75%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
   .lg\:translate-y-0 {
     --tw-translate-y: 0px;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1654,16 +1629,6 @@ h2 {
 
   .lg\:translate-y-\[20\%\] {
     --tw-translate-y: 20%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .lg\:translate-y-\[32\%\] {
-    --tw-translate-y: 32%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .lg\:translate-x-1\/2 {
-    --tw-translate-x: 50%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
@@ -1721,8 +1686,8 @@ h2 {
     padding-bottom: 4rem;
   }
 
-  .lg\:pb-28 {
-    padding-bottom: 7rem;
+  .lg\:pb-72 {
+    padding-bottom: 18rem;
   }
 
   .lg\:pl-24 {
@@ -1735,14 +1700,6 @@ h2 {
 
   .lg\:pt-28 {
     padding-top: 7rem;
-  }
-
-  .lg\:pb-36 {
-    padding-bottom: 9rem;
-  }
-
-  .lg\:pb-72 {
-    padding-bottom: 18rem;
   }
 
   .lg\:text-start {
@@ -1796,11 +1753,6 @@ h2 {
     width: auto;
   }
 
-  .xl\:translate-x-10 {
-    --tw-translate-x: 2.5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
   .xl\:translate-y-\[32\.5\%\] {
     --tw-translate-y: 32.5%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1830,18 +1782,6 @@ h2 {
   .xl\:gap-x-9 {
     -moz-column-gap: 2.25rem;
          column-gap: 2.25rem;
-  }
-
-  .xl\:pb-44 {
-    padding-bottom: 11rem;
-  }
-
-  .xl\:pb-64 {
-    padding-bottom: 16rem;
-  }
-
-  .xl\:pb-72 {
-    padding-bottom: 18rem;
   }
 
   .xl\:text-2xl {
