--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -955,6 +955,20 @@ h2 {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+@keyframes hover {
+  0%, 100% {
+    transform: translateY(6%);
+  }
+
+  50% {
+    transform: translateY(-6%);
+  }
+}
+
+.animate-hover {
+  animation: hover 3.2s linear infinite alternate;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
