--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -965,6 +965,20 @@ h2 {
   }
 }
 
+.animate-hover {
+  animation: hover 3.2s linear infinite alternate;
+}
+
+@keyframes hover {
+  0%, 100% {
+    transform: translateY(6%);
+  }
+
+  50% {
+    transform: translateY(-6%);
+  }
+}
+
 .animate-hover-better-bot-1 {
   animation: hover 3.5s linear infinite alternate;
 }
@@ -981,20 +995,6 @@ h2 {
 
 .animate-hover-better-bot-2 {
   animation: hover 3.5s 1.2s linear infinite alternate;
-}
-
-@keyframes hover {
-  0%, 100% {
-    transform: translateY(6%);
-  }
-
-  50% {
-    transform: translateY(-6%);
-  }
-}
-
-.animate-hover {
-  animation: hover 3.2s linear infinite alternate;
 }
 
 .cursor-pointer {
@@ -1153,6 +1153,10 @@ h2 {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .border {
@@ -1483,6 +1487,14 @@ h2 {
   transition-duration: 700ms;
 }
 
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
@@ -1717,6 +1729,11 @@ h2 {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
+  .lg\:-translate-y-\[100\%\] {
+    --tw-translate-y: -100%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1924,6 +1941,16 @@ h2 {
 }
 
 @media (min-width: 1536px) {
+  .\32xl\:translate-y-0 {
+    --tw-translate-y: 0px;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .\32xl\:translate-y-\[40\%\] {
+    --tw-translate-y: 40%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
   .\32xl\:pb-64 {
     padding-bottom: 16rem;
   }
